--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,8 @@
     "next": "^13.5.6",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^3.4.1"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
