Corriger boucle de redirection /dashboard et amÃ©liorer logging OAuth
- Corriger auth.ts pour ne pas rediriger automatiquement / vers /dashboard sans callbackUrl
- AmÃ©liorer Hero.tsx pour nettoyer callbackUrl de l'URL aprÃ¨s redirection
- Utiliser router.replace dans dashboard/page.tsx pour Ã©viter l'historique
- AmÃ©liorer le logging OAuth dans route.ts pour dÃ©tecter les erreurs [object Object]
- Supprimer serverComponentsExternalPackages de next.config.js (non supportÃ© dans Next.js 13.5.6)
- Ajouter commentaire dans .gitignore sur docs/gifs/ (uniquement pour GitHub)

--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,8 @@ output/
 *.jpg
 *.jpeg
 *.gif
-# Exception: permettre les GIFs dans docs/gifs/ pour le README
+# Exception: permettre les GIFs dans docs/gifs/ pour GitHub documentation uniquement
+# NOTE: docs/gifs/ n'est PAS utilisé par le bot (Render.com), seulement pour GitHub
 !docs/gifs/*.gif
 
 # Puppeteer cache (peut être volumineux, mais nécessaire pour Render)
