--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "puppeteer": "^24.29.1",
     "sharp": "^0.33.2",
     "sqlite3": "^5.1.6",
+    "stripe": "^14.21.0",
     "tweetnacl": "^1.0.3",
     "uuid": "^9.0.1",
     "web-push": "^3.6.7"
