--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.1",
     "express-slow-down": "^2.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.4",
     "gif-encoder-2": "^1.0.5",
     "gifencoder": "^2.0.1",
