Fix: RÃ©organiser architecture fichiers + Corriger erreur mp4Path undefined
- CrÃ©er structure storage/ propre (frames, gifs, mp4s, cache)
- Ajouter src/config/paths.js pour configuration centralisÃ©e
- Mettre Ã  jour tous les chemins pour utiliser la nouvelle architecture
- Corriger ReferenceError: mp4Path is not defined en dÃ©clarant la variable au dÃ©but de compileShader
- Ajouter ARCHITECTURE.md pour documentation
- Mettre Ã  jour .gitignore pour ignorer storage/ et anciens dossiers

--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,16 @@ DISCORD_FILE_UPLOAD_ATTEMPTS.md
 TODO.md
 PROJECT_EXPLANATION.md
 web/README_LOCAL.md
+
+# Storage - Tous les fichiers générés (frames, GIFs, MP4s, cache)
+storage/
+!storage/.gitkeep
+
+# Anciens dossiers (à nettoyer)
+output/
+cache/
+data/frames/
+
+# Tests artifacts
+tests/artifacts/
+!tests/artifacts/.gitkeep
