--- a/config/env.bot.example
+++ b/config/env.bot.example
@@ -41,3 +41,59 @@ LOG_LEVEL=info
 LOG_MAX_FILES=5
 LOG_MAX_SIZE=10m
 
+# ============================================
+# STRIPE CONFIGURATION (Monétisation)
+# ============================================
+# Obtenez ces valeurs depuis https://dashboard.stripe.com
+
+# Clé secrète Stripe (API Keys > Secret key)
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+
+# Webhook secret Stripe (Developers > Webhooks > Signing secret)
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# Price IDs Stripe pour les plans (Products > Pricing)
+STRIPE_PRICE_ID_PRO=price_your_pro_price_id_here
+STRIPE_PRICE_ID_STUDIO=price_your_studio_price_id_here
+
+# ============================================
+# CLEANUP CONFIGURATION
+# ============================================
+
+# Intervalle de nettoyage automatique en heures (optionnel, défaut: 24)
+# Le système nettoie automatiquement les shaders des utilisateurs gratuits > 7 jours
+CLEANUP_INTERVAL_HOURS=24
+
+# ============================================
+# COMPILATION CONFIGURATION
+# ============================================
+
+# Nombre maximum d'instances de navigateur en parallèle (optionnel, défaut: 2)
+MAX_BROWSER_INSTANCES=2
+
+# Timeout pour les compilations en millisecondes (optionnel, défaut: 30000)
+COMPILATION_TIMEOUT=30000
+
+# Nombre maximum de compilations simultanées (optionnel, défaut: 2)
+MAX_CONCURRENT_COMPILATIONS=2
+
+# ============================================
+# REDIS CONFIGURATION (Optionnel)
+# ============================================
+# Pour le rate limiting avancé et la queue (optionnel)
+
+# URL de connexion Redis (optionnel)
+# Exemple: redis://localhost:6379
+REDIS_URL=
+
+# ============================================
+# ENVIRONMENT
+# ============================================
+
+# Environnement d'exécution (optionnel, défaut: development)
+# Options: development, production, test
+NODE_ENV=development
+
+# URL de base de l'application web (pour les liens dans les messages)
+WEB_URL=https://your-app-url.com
+
