Organiser documentation dans docs/ avec structure claire
- DÃ©placer tous les fichiers de documentation dans docs/
- CrÃ©er structure organisÃ©e: setup/, development/
- Renommer fichiers pour cohÃ©rence (architecture.md, security.md, etc.)
- Ajouter docs/README.md comme index de la documentation
- Mettre Ã  jour .gitignore pour ignorer docs/*.md (sauf README.md)

--- a/.gitignore
+++ b/.gitignore
@@ -109,12 +109,11 @@ web/**/*.spec.tsx
 # Documentation Markdown files (except README.md)
 *.md
 !README.md
-# Exclude documentation files specifically
-MONETIZATION_SETUP.md
-SECURITY_IMPLEMENTATION.md
-DISCORD_FILE_UPLOAD_ATTEMPTS.md
-TODO.md
-PROJECT_EXPLANATION.md
+!docs/README.md
+# Exclude documentation files in docs/ (keep them local, not versioned)
+docs/*.md
+docs/**/*.md
+!docs/README.md
 web/README_LOCAL.md
 
 # Storage - Tous les fichiers générés (frames, GIFs, MP4s, cache)
