--- a/.gitignore
+++ b/.gitignore
@@ -106,14 +106,10 @@ web/**/*.test.tsx
 web/**/*.spec.ts
 web/**/*.spec.tsx
 
-# Documentation Markdown files (except README.md)
+# Documentation Markdown files (except README.md and docs/)
 *.md
 !README.md
-!docs/README.md
-# Exclude documentation files in docs/ (keep them local, not versioned)
-docs/*.md
-docs/**/*.md
-!docs/README.md
+!docs/**/*.md
 web/README_LOCAL.md
 
 # Storage - Tous les fichiers générés (frames, GIFs, MP4s, cache)
