RÃ©organiser GIFs presets et optimiser pour plan free
- Supprimer test-animation.gif (non utilisÃ©)
- DÃ©placer GIFs de docs/gifs/ vers assets/presets/
- Utiliser GIFs prÃ©compilÃ©s directement pour plan free (Ã©vite recompilation)
- Mettre Ã  jour toutes les rÃ©fÃ©rences dans le code web
- Corriger .gitignore pour ne PAS versionner la documentation (sauf README.md)
- Les GIFs presets sont versionnÃ©s dans assets/presets/ pour utilisation directe

--- a/.gitignore
+++ b/.gitignore
@@ -106,10 +106,13 @@ web/**/*.test.tsx
 web/**/*.spec.ts
 web/**/*.spec.tsx
 
-# Documentation Markdown files (except README.md and docs/)
+# Documentation Markdown files (except README.md)
 *.md
 !README.md
-!docs/**/*.md
+# Exclude all documentation files in docs/ (keep them local, not versioned)
+docs/*.md
+docs/**/*.md
+!docs/README.md
 web/README_LOCAL.md
 
 # Storage - Tous les fichiers générés (frames, GIFs, MP4s, cache)
