ImplÃ©menter stockage cloud S3 pour Pro/Studio
- CrÃ©er src/utils/cloudStorage.js avec upload/delete S3
- Ajouter colonnes cloud_url, mp4_path, cloud_mp4_url dans shaders table
- IntÃ©grer upload automatique S3 aprÃ¨s compilation (Pro/Studio uniquement)
- Mettre Ã  jour commands/shader.js et commands/shader-preset.js
- Ajouter variables S3 dans config/env.bot.example
- Upload GIF et MP4 vers S3 avec structure shaders/{userId}/{shaderId}/
- Support CDN optionnel via S3_CDN_URL

--- a/config/env.bot.example
+++ b/config/env.bot.example
@@ -97,3 +97,22 @@ NODE_ENV=development
 # URL de base de l'application web (pour les liens dans les messages)
 WEB_URL=https://your-app-url.com
 
+# ============================================
+# S3 CLOUD STORAGE CONFIGURATION (Optionnel)
+# ============================================
+# Pour le stockage cloud illimité des shaders (Pro/Studio)
+
+# Nom du bucket S3
+S3_BUCKET_NAME=your-s3-bucket-name
+
+# Région AWS (ex: us-east-1, eu-west-1)
+S3_REGION=us-east-1
+
+# Clés d'accès AWS (IAM user avec permissions S3)
+AWS_ACCESS_KEY_ID=your-aws-access-key-id
+AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
+
+# URL CDN optionnelle (si vous utilisez CloudFront ou similaire)
+# Exemple: https://cdn.yourdomain.com
+S3_CDN_URL=
+
