--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "better-sqlite3": "^9.2.2",
+    "lucide-react": "^0.294.0",
     "next": "^13.5.6",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
